# NvCloth

./: .gitattributes  Installatie.txt  README.md
NvCloth/: BuildProjectsIOS.sh  BuildProjectsOsx.sh  CmakeGenerateAndroid.bat  CmakeGenerateProjects.bat  FindNvCloth.cmake  GenerateProjectsIOS.sh  GenerateProjectsLinux.sh  GenerateProjectsOsx.sh  README.md  ReleaseNotes.txt  clean.bat
NvCloth/Tools/AuthoringLibrary/: CMakeLists.txt  CmakeGenerateProjects.bat
NvCloth/Tools/AuthoringLibrary/src/: CollisionVisualization.cpp  (+2 more)
NvCloth/compiler/cmake/android/: CMakeLists.txt  NvCloth.cmake
NvCloth/compiler/vc12win32-cmake/: CMakeCache.txt
NvCloth/compiler/vc12win64-cmake/: CMakeCache.txt
NvCloth/compiler/vc14win32-cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NvCloth.sln  NvCloth.vcxproj  NvCloth.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
NvCloth/compiler/vc14win64-cmake/: ALL_BUILD.vcxproj  CMakeCache.txt  NvCloth.sln  NvCloth.vcxproj  NvCloth.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
NvCloth/docs/documentation/: .buildinfo  NvCloth.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
NvCloth/extensions/src/: ClothFabricCooker.cpp  ClothGeodesicTetherCooker.cpp  ClothMeshQuadifier.cpp  ClothSimpleTetherCooker.cpp
NvCloth/include/NvCloth/: Allocator.h  Callbacks.h  Cloth.h  Fabric.h  Solver.h
NvCloth/lib/vc14win64-cmake/: NvClothDEBUG_x64.exp  NvClothDEBUG_x64.lib  PxFoundationDEBUG_x64.exp  PxFoundationDEBUG_x64.lib
NvCloth/samples/: CMakeLists.txt  CmakeGenerateProjects.bat
NvCloth/samples/SampleBase/: Main.cpp  Sample.h
NvCloth/samples/compiler/cmake/windows/: CMakeLists.txt  SampleBase-AT.cmake  SampleBase.cmake
NvCloth/scripts/: locate_cuda.bat  locate_gw_root.bat
NvCloth/scripts/packman/: config.packman.xml  packman.sh  packman_config.txt
NvCloth/src/: Allocator.cpp  BoundingBox.h  Callbacks.cpp  ClothBase.h  ClothClone.h  ClothImpl.h  Factory.cpp  IndexPair.h  IterationState.h  MovingAverage.h  PhaseConfig.cpp  PointInterpolator.h  Simd.h  StackAllocator.h  SwCloth.cpp  SwCloth.h  SwClothData.cpp  SwClothData.h  SwCollision.cpp  SwCollision.h  SwCollisionHelpers.h  SwFabric.cpp  SwFabric.h  SwFactory.cpp  SwFactory.h  SwInterCollision.cpp  SwInterCollision.h  SwSelfCollision.cpp  SwSelfCollision.h  SwSolver.cpp  SwSolver.h  SwSolverKernel.cpp  SwSolverKernel.h  TripletScheduler.cpp  TripletScheduler.h  Vec4T.h
NvCloth/src/NvSimd/: NvSimd4f.h  NvSimd4i.h  NvSimdTypes.h
NvCloth/src/avx/: SwSolveConstraints.cpp
NvCloth/src/cuda/: CuCheckSuccess.h  CuCloth.cpp  CuCloth.h  CuClothClone.cpp  CuClothData.cpp  CuClothData.h  CuCollision.h  CuContextLock.cpp  CuContextLock.h  CuDevicePointer.h  CuDeviceVector.h  CuFabric.cpp  CuFabric.h  CuFactory.cpp  CuFactory.h  CuPhaseConfig.h  CuPinnedAllocator.h  CuSelfCollision.h  CuSolver.cpp  CuSolver.h  CuSolverKernel.cu  CuSolverKernel.h
NvCloth/src/dx/: DxBatchedVector.h  DxCheckSuccess.h  DxCloth.cpp  DxCloth.h  DxClothClone.cpp  DxClothData.cpp  DxClothData.h  DxContextLock.cpp  DxContextLock.h  DxDeviceVector.h  DxFabric.cpp  DxFabric.h  DxFactory.cpp  DxFactory.h  DxSolver.cpp  DxSolver.h  DxSolverKernel.hlsl  DxSolverKernelBlob.h
NvCloth/src/neon/: NeonCollision.cpp  NeonSelfCollision.cpp  NeonSolverKernel.cpp
NvCloth/src/ps/: PsAlloca.h  PsFPU.h  PsSort.h  PsSortInternals.h  PsUtilities.h  PxIntrinsics.h
NvCloth/src/scalar/: SwCollisionHelpers.h
NvCloth/src/sse2/: SwCollisionHelpers.h  SwSolveConstraints.h
PxShared/: .clang-format  GenerateProjects.bat  common.pm  dependencies.xml  generate_projects_android.bat  generate_projects_ios.sh  generate_projects_linux.bat  generate_projects_linux.sh  generate_projects_mac.sh  generate_projects_uwp.bat  generate_projects_win.bat  license.txt
PxShared/buildtools/: cmake_projects_android.bat  cmake_projects_ios.sh  cmake_projects_linux.bat  cmake_projects_linux.sh  cmake_projects_mac.sh  cmake_projects_vc12win.bat  cmake_projects_vc14ps4.bat  cmake_projects_vc14switch.bat  cmake_projects_vc14uwp.bat  cmake_projects_vc14win.bat  cmake_projects_vc14xboxone.bat  cmake_projects_vc15ps4.bat  cmake_projects_vc15switch.bat  cmake_projects_vc15uwp.bat  cmake_projects_vc15win.bat  cmake_projects_vc15xboxone.bat
PxShared/buildtools/clang-format/: clang-format-all.bat  clang-format-p4.bat  directories.txt
PxShared/buildtools/packman/: packman  packman.cmd  packman_config.txt
PxShared/buildtools/steps/: build_all_linux.sh  build_all_mac.sh  build_all_windows.bat  build_all_windows_vc12.bat  build_all_windows_vc14.bat  package_all_linux.sh  package_all_mac.sh  package_all_ps4.bat  package_all_windows.bat  package_all_xboxone.bat  pre-build_linux.sh  pre-build_mac.sh  pre-build_ps4.bat  pre-build_windows.bat  pre-build_xboxone.bat  rebuild_all_ps4.bat  rebuild_all_xboxone.bat  run_tests_linux.sh  run_tests_windows.bat
PxShared/include/foundation/: Px.h  PxAllocatorCallback.h  PxBitAndData.h  PxBounds3.h  PxErrorCallback.h  PxErrors.h  PxFlags.h  PxIO.h  PxIntrinsics.h  PxMat33.h  PxMat44.h  PxMath.h  PxMemory.h  PxPlane.h  PxPreprocessor.h  PxProfiler.h  PxQuat.h  PxSharedAssert.h  PxSimpleTypes.h  PxStrideIterator.h  PxTransform.h  PxUnionCast.h  PxVec2.h  PxVec3.h  PxVec4.h
PxShared/src/compiler/cmake/: CMakeLists.txt  PxFoundation.cmake
PxShared/src/compiler/cmake/Android/: CMakeLists.txt  PsFastXml.cmake  PxFoundation.cmake  PxPvdSDK.cmake  PxTask.cmake
PxShared/src/compiler/cmake/IOS/: CMakeLists.txt
PxShared/src/compiler/cmake/Linux/: CMakeLists.txt
PxShared/src/compiler/cmake/Mac/: CMakeLists.txt
PxShared/src/compiler/cmake/Modules/: FindnvToolsExt.cmake
PxShared/src/compiler/cmake/common/: CMakeLists.txt
PxShared/src/compiler/cmake/html5/: CMakeLists.txt
PxShared/src/compiler/cmake/linux/: CMakeLists.txt
PxShared/src/compiler/cmake/templates/: ProjectVersion.cmake.in
PxShared/src/compiler/cmake/uwp/: CMakeLists.txt  PxFoundation.cmake
PxShared/src/compiler/cmake/windows/: CMakeLists.txt
(+452 files in other folders)
